test/files/neg/macro-invalidimpl-g.check
Macros_Test_2.scala:2: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.Context): c.Expr[Unit]
 found   : (c: scala.reflect.macros.Context)(): c.Expr[Unit]
number of parameter sections differ
  def foo1 = macro Impls.fooEmpty
                         ^
one error found
